--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ npm-debug.log*
 node_modules
 
 # Generated js bundles
-/app/assets/webpack/*
-# Added by webpack-rails
-/node_modules
-/public/webpack
+# /app/assets/webpack/*
+# # Added by webpack-rails
+# /node_modules
+# /public/webpack
 /nano.save
